Mini-Projet/wordpress-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: wordpress-deployment
  labels: 
    app: wordpress
spec:
  replicas: 1
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector: 
    matchLabels: 
      app: wordpress
  template:
    metadata:
      name: wordpress
      labels:
        app: wordpress
    spec:
      containers:
       - name: wordpress-pod
         image: wordpress
         ports:
          - containerPort: 80
         volumeMounts:
          - mountPath: /var/www/html
            name: data-volume
    #creation du volume        
      volumes:
        - name: data-volume
          hostPath:
            path: /data
            type: Directory
