Mini-Projet/wp-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
spec:
  type: NodePort
  ports:
   - protocol: TCP
     targetPort: 80
     port: 8081
     nodePort: 30008
  selector:
    app: wordpress
