Mini-Projet/wp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: frazer-wordpress.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wp-lb-svc
                port:
                  number: 80
